syntax = "proto3";

package pokemon_command;

service PokemonCommandService {
  rpc CreatePokemon (CreatePokemonRequest) returns (CreatePokemonResponse) {}
  rpc UpdatePokemon (UpdatePokemonRequest) returns (UpdatePokemonResponse) {}
}

message CreatePokemonRequest {
  int32 pokedexNo = 1;
  string name = 2;
}

message CreatePokemonResponse {
  string pokemonId = 1;
}

message UpdatePokemonRequest {
  string pokemonId = 1;
  int32 pokedexNo = 2;
  string name = 3;
}

message UpdatePokemonResponse {
  string pokemonId = 1;
}