syntax = "proto3";

package pokemon_query;

service PokemonQueryService {
  rpc FetchAllPokemon (FetchAllPokemonRequest) returns (FetchAllPokemonResponse) {}
  rpc FindPokemon (FindPokemonRequest) returns (FindPokemonResponse) {}
}

message FetchAllPokemonRequest {}

message FetchAllPokemonResponse {
  repeated Pokemon pokemonList = 1;
}

message FindPokemonRequest {
  string pokemonId = 1;
}

message FindPokemonResponse {
  Pokemon pokemon = 1;
}

message Pokemon {
  string pokemonId = 1;
  int32 pokedexNo = 2;
  string name = 3;
  string typeId1 = 4;
  optional string typeId2 = 5;
  int32 hitPoints = 6;
  int32 attack = 7;
  int32 defense = 8;
  int32 spAttack = 9;
  int32 spDefense = 10;
  int32 speed = 11;
}